--- a/Ch8_Satellite_Example.ipynb
+++ b/Ch8_Satellite_Example.ipynb
@@ -46,11 +46,11 @@
     "\n",
     "# select either a range of lat/lon or a point. \n",
     "# If a point, set both entries to the same value\n",
-    "latr = [20, 70] # make sure lat1 < lat2 since no test is done below to simplify the code\n",
-    "lonr = [-140, -110] # lon1 < lon2, range -180:180. resolution daily 1km!\n",
+    "latr = [35, 42] # make sure lat1 < lat2 since no test is done below to simplify the code\n",
+    "lonr = [-125, -120] # lon1 < lon2, range -180:180. resolution daily 1km!\n",
     "\n",
     "# time range. data range available: 2002-06-01 to 2020-01-20. [start with a short period]\n",
-    "dater = ['2018-01-01','2018-12-31'] # dates on the format 'YYYY-MM-DD' as string"
+    "dater = ['2018-01-01','2018-01-02'] # dates on the format 'YYYY-MM-DD' as string"
    ]
   },
   {
@@ -1590,16 +1590,10 @@
    ],
    "source": [
     "# decide if a point or a region was given.\n",
-    "if (latr[0]==latr[1]) | (lonr[0]==lonr[1]): # if we give it only one point\n",
-    "    sst = ds_sst.sel(time = slice(dater[0],dater[1]),\n",
-    "                                            lat  = latr[0], \n",
-    "                                            lon  = lonr[0]\n",
-    "                                           ).load()\n",
-    "else: # if we give it an area, it extract the area and average SST over the area and returns a time series of SST\n",
-    "    sst = ds_sst.sel(time = slice(dater[0],dater[1]),\n",
-    "                                            lat  = slice(latr[0], latr[1]), \n",
-    "                                            lon  = slice(lonr[0], lonr[1])\n",
-    "                                           ).mean(dim={'time'}, skipna=True, keep_attrs=True).load() # skip 'not a number' (NaN) values and keep attributes\n",
+    "sst = ds_sst.sel(time = slice(dater[0],dater[1]),\n",
+    "                        lat  = slice(latr[0], latr[1]), \n",
+    "                        lon  = slice(lonr[0], lonr[1])\n",
+    "                        ).mean(dim={'time'}, skipna=True, keep_attrs=True).load() # skip 'not a number' (NaN) values and keep attributes\n",
     "\n",
     "sst = sst-273.15 # transform units from Kelvin to  Celsius\n",
     "sst.attrs['units']='deg C' # update units in metadata\n",
@@ -2087,8 +2081,8 @@
     "ax.gridlines(linestyle = '--', linewidth = 0.5)\n",
     "\n",
     "# Plot track data, color by temperature\n",
-    "sst.analysed_sst.plot(transform=ccrs.PlateCarree(),cbar_kwargs={'label': 'Temperature [deg C]'}, vmin = 0, cmap = \"RdBu_r\")\n",
-    "plt.title('Averaged Temperature Values (2018)', fontdict = {'fontsize' : 16})\n",
+    "sst.analysed_sst.plot(transform=ccrs.PlateCarree(),cbar_kwargs={'label': 'Temperature [deg C]'}, cmap = \"RdBu_r\")\n",
+    "plt.title('Averaged Temperature Values ('+dater[0]+'-'+dater[1]+')', fontdict = {'fontsize' : 16})\n",
     "plt.show()"
    ]
   },
@@ -3307,7 +3301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
