Cleared output from all notebooks

--- a/Ch5_Reading_Data.ipynb
+++ b/Ch5_Reading_Data.ipynb
@@ -211,7 +211,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sometimes you might need to read in many files at once. The mfdataset function from __xarray__ allows you to open only certain files and combine them into a single varaible. The three files that are opened in the next cell are from a satellite where each time stamp is stored as it's own variable. "
+    "Sometimes you might need to read in many files at once. The mfdataset function from __xarray__ allows you to open only certain files and combine them into a single varaible. The three files that are opened in the next cell are from a satellite where each time stamp is stored as it's own variable. Look at the time dimension in the when just opening one data file and then look at the time dimensions using the mf_dataset() function. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_mf = xr.open_mfdataset('data/CMEMS_Thetao_monthly_MERCATOR_2019-10.nc'.format(dir), engine = 'netcdf4') #engine argument to specify file type\n",
+    "ds_mf.close()\n",
+    "ds_mf"
    ]
   },
   {
