--- a/Ch8_Satellite_Example.ipynb
+++ b/Ch8_Satellite_Example.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "# select either a range of lat/lon or a point. \n",
     "# If a point, set both entries to the same value\n",
-    "latr = [35, 42] # make sure lat1 < lat2 since no test is done below to simplify the code\n",
+    "latr = [35, 40] # make sure lat1 < lat2 since no test is done below to simplify the code\n",
     "lonr = [-125, -120] # lon1 < lon2, range -180:180. resolution daily 1km!\n",
     "\n",
     "# time range. data range available: 2002-06-01 to 2020-01-20. [start with a short period]\n",
@@ -94,16 +94,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#remove all values that are for lakes (look at the meta data for the mask field above)\n",
+    "sst_filtered = ds_sst.where(ds_sst.mask != 5, np.nan)\n",
+    "\n",
     "#filter the data using the specified extent of the latitutde, longitude, and time from above\n",
-    "sst = ds_sst['analysed_sst'].sel(time = slice(dater[0],dater[1]),\n",
+    "sst = sst_filtered['analysed_sst'].sel(time = slice(dater[0],dater[1]),\n",
     "                        lat  = slice(latr[0], latr[1]), \n",
     "                        lon  = slice(lonr[0], lonr[1])\n",
     "                        ).mean(dim={'time'}, skipna=True, keep_attrs=True).load() # skip 'not a number' (NaN) values and keep attributes\n",
     "\n",
     "sst = sst-273.15 # transform units from Kelvin to Celsius\n",
     "sst.attrs['units']='deg C' # update units in metadata\n",
-    "sst.to_netcdf('data/sst_example.nc') # saving the data, incase we want to come back to analyze the same data, but don't want to acquire it again from the cloud.\n",
-    "sst # take a peak"
+    "sst.to_netcdf('data/sst_example.nc') # saving the data, incase we want to come back to analyze the same data, but don't want to acquire it again from the cloud."
    ]
   },
   {
@@ -125,7 +127,7 @@
     "sst.close()\n",
     "\n",
     "#look at the temperature data\n",
-    "sst"
+    "sst.analysed_sst.values"
    ]
   },
   {
@@ -135,8 +137,8 @@
    "outputs": [],
    "source": [
     "#define latitude and longitude boundaries\n",
-    "latr = [min(sst.analysed_sst['lat']), max(sst.analysed_sst['lat'])] \n",
-    "lonr = [max(sst.analysed_sst['lon']), min(sst.analysed_sst['lon'])] \n",
+    "latr = [np.nanmin(sst.analysed_sst['lat']), np.nanmax(sst.analysed_sst['lat'])] \n",
+    "lonr = [np.nanmax(sst.analysed_sst['lon']), np.nanmin(sst.analysed_sst['lon'])] \n",
     "\n",
     "# Select a region of our data, giving it a margin\n",
     "margin = 0\n",
@@ -254,7 +256,7 @@
     "###Temperature Map\n",
     "#create the figure\n",
     "plt.figure(figsize=(16,8), dpi = 72)\n",
-    "p = sst_compare.analysed_sst.plot(\n",
+    "p = sst.analysed_sst.plot(\n",
     "    subplot_kws=dict(projection=ccrs.PlateCarree()),\n",
     "    transform=ccrs.PlateCarree())\n",
     "plt.title(\"Temperature\")\n",
@@ -300,7 +302,7 @@
     "sss_transform.coords['lon'] = np.mod(sss_transform.coords['lon'] + 180,360) - 180\n",
     "\n",
     "#interpolate the data using the .interp_like() function\n",
-    "sss_inter = sss_transform.interp_like(sst_compare.analysed_sst)\n",
+    "sss_inter = sss_transform.interp_like(sst.analysed_sst)\n",
     "\n",
     "#look at the shape of the data before and after the interpolation\n",
     "print(\"Shape before interpolation: \", sss_compare.dims)\n",
